--- a/Project/Css/mineFieldStyles.css
+++ b/Project/Css/mineFieldStyles.css
@@ -5,7 +5,6 @@ form {
     align-items: stretch;
 
     margin-left: 1%;
-    margin-bottom: 50px;
 
     width: calc(100% - 2%);
     min-width: 300px;
